cambio respuesta login y documentación Auth
