# swagger.json
@@ -77,14 +77,14 @@
         "tags": [
           "Authentication"
         ],
-        "summary": "User register",
-        "description": "User register",
+        "summary": "User login",
+        "description": "User login",
         "requestBody": {
-          "description": "Information needed to create a user",
+          "description": "Data to login",
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/User"
+                "$ref": "#/components/schemas/Login"
               }
             }
            
@@ -97,7 +97,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/User"
+                  "$ref": "#/components/schemas/LoginResponse"
                 }
               }
             }
@@ -545,68 +545,53 @@
   },
   "components": {
     "schemas": {
-      "Order": {
+      "Login": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 10
-          },
-          "petId": {
-            "type": "integer",
-            "format": "int64",
-            "example": 198772
-          },
-          "quantity": {
-            "type": "integer",
-            "format": "int32",
-            "example": 7
-          },
-          "shipDate": {
+          "email": {
             "type": "string",
-            "format": "date-time"
+            "example": "wmgc520@gmail.com"
           },
-          "status": {
+          "password": {
             "type": "string",
-            "description": "Order Status",
-            "example": "approved",
-            "enum": [
-              "placed",
-              "approved",
-              "delivered"
-            ]
-          },
-          "complete": {
-            "type": "boolean"
+            "example":"ImHandsome"
+           
           }
         },
-        "xml": {
-          "name": "order"
-        }
+        "required":[
+          "email",
+          "password"
+        ]
       },
-      "Customer": {
+      "LoginResponse": {
         "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64",
-            "example": 100000
-          },
-          "username": {
-            "type": "string",
-            "example": "fehguy"
-          },
-          "address": {
-            "type": "array",
-            "xml": {
-              "name": "addresses",
-              "wrapped": true
-            },
-            "items": {
-              "$ref": "#/components/schemas/Address"
-            }
-          }
+            "properties": {
+              "userData": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  },
+                  "lastname": {
+                    "type": "string"
+                  },
+                  "username": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "age": {
+                    "type": "integer"
+                  }
+                }
+              },
+              "token": {
+                "type": "string"
+              }
         },
         "xml": {
           "name": "customer"
@@ -685,9 +670,16 @@
             "example": 10
           }
         },
-        "xml": {
-          "name": "user"
-        }
+        "required":[
+          "name",
+          "lastname",
+          "username",
+          "password",
+          "passwordConfirm",
+          "email",
+          "age"
+        ]
+        
       },
       "Tag": {
         "type": "object",
